WorkShop_2.1_Ingress_Network/ingress_webtest.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingresswebtest
spec:
  rules:
  - host: webtest1.kuberneteslabthailand.com
    http:
      paths:
      - backend:
          serviceName: webtest1
          servicePort: 80
  - host: webtest2.kuberneteslabthailand.com
    http:
      paths:
      - backend:
          serviceName: webtest2
          servicePort: 80
